# coastal-monitoring-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: merge.yaml
src/coastal_monitoring_client/: __init__.py  client.py  endpoints.py  glossary.py  models.py
tests/: test_client.py  test_models.py
tests/data/: observation_waves.json
